--- a/11.circle-bounce-2.html
+++ b/11.circle-bounce-2.html
@@ -11,11 +11,11 @@
 
     var sketch;
     var context;
-    var circle = {'x':35, 'y':100, 'r':25};
+    var circle = {'x':10, 'y':100, 'r':25};
     var dx = 2;
     var dy = 2;
-    var acc = 0.9;
-    var vel = 1.0;
+    var acc = 0.2;
+    var vel = 0.9;
     var fps = 10;
 
     function main() {
@@ -29,6 +29,7 @@
       context.clearRect(0, 0, sketch.offsetWidth, sketch.offsetHeight);
       draw_circle(circle.x, circle.y, circle.r);
       circle.y = circle.y + dy;
+      circle.x = circle.x + dx;
       if (circle.x > sketch.offsetWidth - dx - circle.r) {
             dx = dx * -1;
         }
@@ -41,16 +42,23 @@
       else if (circle.y < circle.r - dy) {
             dy = dy * -1;
         }
-     else if (Math.abs(dy) < min_dy_val) {
-          dy = 0
-          acc = 0
-     }
-     else if (Math.abs(dy) > min_dy_val) {
-          dy = 2000
-          acc = 25000
+      else if (Math.abs(dx) < min_dx_val) {
+             dx = 0
+             acc = 0
+        }
+      else if (Math.abs(dy) > min_dy_val) {
+             dy = 2
+             acc = 2
+        }
+      else if (Math.abs(dx) < min_dx_val) {
+            dx = 0
+            acc = 0
+        }
+      else if (Math.abs(dy) > min_dy_val) {
+            dy = 2
+            acc = 2
+        }
     }
-  }
-
     function draw_circle(x, y, r) {
       context.beginPath();
 			context.arc(x, y, r, 0, 2 * Math.PI, true);
