--- a/11.circle-bounce-2.html
+++ b/11.circle-bounce-2.html
@@ -30,6 +30,7 @@
       draw_circle(circle.x, circle.y, circle.r);
       circle.y = circle.y + dy;
       circle.x = circle.x + dx;
+      dy = dy + acc 
       if (circle.x > sketch.offsetWidth - dx - circle.r) {
             dx = dx * -1;
         }
@@ -38,25 +39,11 @@
         }
       else if (circle.y > sketch.offsetHeight - dy - circle.r) {
             dy = dy * -1;
+            dy = dy * vel;
         }
       else if (circle.y < circle.r - dy) {
             dy = dy * -1;
-        }
-      else if (Math.abs(dx) < min_dx_val) {
-             dx = 0
-             acc = 0
-        }
-      else if (Math.abs(dy) > min_dy_val) {
-             dy = 2
-             acc = 2
-        }
-      else if (Math.abs(dx) < min_dx_val) {
-            dx = 0
-            acc = 0
-        }
-      else if (Math.abs(dy) > min_dy_val) {
-            dy = 2
-            acc = 2
+            dy = dy * vel;
         }
     }
     function draw_circle(x, y, r) {
