--- a/checkerboard.html
+++ b/checkerboard.html
@@ -11,21 +11,38 @@
           var sketch = document.getElementById('sketch');
           var context = sketch.getContext("2d");
 
-          for (var i = 0; i <= 8; i++) {
-            if (i % 2 == 0) {
-            // white SQUARES :
-            context.fillStyle = "#FFFFFF";
-            context.fillRect((i * 25), 20, 20, 20);
-          } else {
-            // black SQUARES :
-            context.fillStyle = "#000000";
-            context.fillRect((i * 25), 20, 20, 20);
-            /*context.beginPath();
-            context.arc((i * 25 + 10), 30, 10, 0, 2 * Math.PI, true);
-            context.closePath();
-            context.fill();*/
-          }
+          context.fillStyle = "#000000";
+
+      for (var i = 0; i <= 3; i ++) {
+        context.fillRect((i * 41) + 20, 0, 20, 20);
       }
+      for (var i = 0; i <= 4; i ++) {
+        context.fillRect((i * 41), 20, 20, 20);
+      }
+      for (var i = 0; i <= 3; i ++) {
+        context.fillRect((i * 41) + 20, 40, 20, 20);
+      }
+      for (var i = 0; i <= 4; i ++) {
+        context.fillRect((i * 41), 60, 20, 20);
+      }
+      for (var i = 0; i <= 3; i ++) {
+        context.fillRect((i * 41) + 20, 80, 20, 20);
+      }
+      for (var i = 0; i <= 4; i ++) {
+        context.fillRect((i * 41), 100, 20, 20);
+      }
+      for (var i = 0; i <= 3; i ++) {
+        context.fillRect((i * 41) + 20, 120, 20, 20);
+      }
+      for (var i = 0; i <= 4; i ++) {
+        context.fillRect((i * 41), 140, 20, 20);
+      }
+  /*  for (var i = 0; i <= 3; i ++) {
+      context.fillRect((i * 40), 20, 20, 20);
+    }
+    for (var i = 0; i <= 4; i ++) {
+      context.fillRect((i * 40), 20, 20, 20);
+}*/
   }
     </script>
   </body>
